Fix sidebar breaking when it doesn't fit in viewport

--- a/19-kanban-task-management/src/index.css
+++ b/19-kanban-task-management/src/index.css
@@ -9,4 +9,8 @@
     font-display: swap;
     src: url(./assets/PlusJakartaSans-VariableFont_wght.ttf);
   }
+
+  html {
+    overflow: hidden;
+  }
 }
